--- a/index.ipynb
+++ b/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -11,8 +11,8 @@
    "outputs": [],
    "source": [
     "def compile():\n",
-    "    ! jupyter nbconvert --to slides slides.ipynb  --reveal-prefix reveal.js --SlidesExporter.reveal_theme=simple && \\\n",
-    "    slides.slides.html"
+    "    ! jupyter nbconvert --to slides index.ipynb  --reveal-prefix reveal.js --SlidesExporter.reveal_theme=simple && \\\n",
+    "    index.slides.html"
    ]
   },
   {
@@ -3191,7 +3191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -3202,8 +3202,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook slides.ipynb to slides\n",
-      "[NbConvertApp] Writing 438257 bytes to slides.slides.html\n"
+      "[NbConvertApp] Converting notebook index.ipynb to slides\n",
+      "[NbConvertApp] Writing 438256 bytes to index.slides.html\n"
      ]
     }
    ],
@@ -3243,7 +3243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   },
   "nbconvert": {
    "height": "70%",
