--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -12,6 +12,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Оптимизации\n",
+    "## Задача\n",
+    "$$\n",
+    "    f(x) \\rightarrow min \\\\\n",
+    "    x \\in \\mathbb{R} \n",
+    "$$\n",
+    "\n",
+    "## Градиентый спуск\n",
+    "Небольшие шаги в направлении градиента из текущей точки"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 216,
    "metadata": {},
