--- a/lab_1.2/report.ipynb
+++ b/lab_1.2/report.ipynb
@@ -34,7 +34,9 @@
     "Будем считать, что $\\gamma$ -излучение - представляет собой поток квантов у которых:  \n",
     "\n",
     "$$\n",
-    "    E = \\hbar\\omega \\\\\n",
+    "    E = \\hbar\\omega\n",
+    "$$\n",
+    "$$\n",
     "    p = \\dfrac{\\hbar\\omega}{c}\n",
     "$$\n",
     "\n",
@@ -48,14 +50,17 @@
     "$\\gamma$ -квант имел начальную энергию \n",
     "\n",
     "$$\n",
-    "    E_k = \\hbar\\omega_0 \\\\\n",
+    "    E_k = \\hbar\\omega_0\n",
+    "$$\n",
+    "$$\n",
     "    p_k = \\frac{\\hbar\\omega}{c}\n",
     "$$\n",
     "\n",
     "\n",
     "Тогда после соударения:\n",
     "$$\n",
-    "    E_{el} = \\gamma mc^2 \\\\\n",
+    "    E_{el} = \\gamma mc^2\n",
+    "$$\n",
     "    p_{el} = \\gamma mv\n",
     "$$\n",
     "\n",
@@ -67,8 +72,12 @@
     "\n",
     "Тогда ЗСИ и ЗСЭ:\n",
     "$$\n",
-    "    mc^2 + \\hbar\\omega_0 = \\gamma mc^2 + \\hbar\\omega_1 \\\\\n",
+    "    mc^2 + \\hbar\\omega_0 = \\gamma mc^2 + \\hbar\\omega_1\n",
+    "$$\n",
+    "$$\n",
     "    \\dfrac{\\hbar\\omega_0}{c} = \\gamma mv\\cos(\\phi) + \\dfrac{\\hbar\\omega_1}{c}\\cos(\\theta) \\\\\n",
+    "$$\n",
+    "$$\n",
     "    \\gamma mv \\sin(\\phi) = \\dfrac{\\hbar\\omega}{c}\\sin{\\theta}\n",
     "$$\n",
     "\n",
@@ -105,10 +114,15 @@
     "\n",
     "Оценим погрешности:\n",
     "$$\n",
-    "    \\dfrac{\\sigma N}{N} = 0.01 \\\\\n",
+    "    \\dfrac{\\sigma N}{N} = 0.01\n",
+    "$$\n",
+    "$$\n",
     "    \\sigma \\theta = 0.5 \\deg\n",
-    "    \\\\  \n",
+    "$$\n",
+    "$$\n",
     "    \\sigma X = |\\sin(\\theta)|\\sigma\\theta \\\\\n",
+    "$$\n",
+    "$$\n",
     "    \\sigma Y = \\left|\\dfrac{\\sigma N}{N(\\theta)^2}\\right|\n",
     "$$"
    ]
@@ -512,8 +526,12 @@
     "## Результаты\n",
     "Параметры получившейся наилучшей прямой (использованный метод апроксимации \\-- OLS (ordinary least square)):\n",
     "$$\n",
-    "    Y = AX + B \\\\\n",
-    "    A = 0.0015 \\pm 3 \\cdot 10^{-5} \\\\\n",
+    "    Y = AX + B\n",
+    "$$\n",
+    "$$\n",
+    "    A = 0.0015 \\pm 3 \\cdot 10^{-5}\n",
+    "$$\n",
+    "$$\n",
     "    B = 0.0011 \\pm 1 \\cdot 10^{-5}\n",
     "$$\n",
     "\n",
@@ -526,10 +544,16 @@
     "\n",
     "Отсюда\n",
     "$$\n",
-    "    N_{best}(0) = 931 \\pm 9 \\\\\n",
-    "    N_{best}(90) = 395 \\pm 9 \\\\\n",
-    "    mc^2 = E_\\gamma \\cdot \\dfrac{N_{best}(90)}{N_{best}(0) - N_{best}(90)} \\\\\n",
-    "    E_\\gamma = 661.7 \\pm 9\\ keV \\\\\n",
+    "    N_{best}(0) = 931 \\pm 9\n",
+    "$$\n",
+    "$$\n",
+    "    N_{best}(90) = 395 \\pm 9\n",
+    "$$\n",
+    "$$\n",
+    "    mc^2 = E_\\gamma \\cdot \\dfrac{N_{best}(90)}{N_{best}(0) - N_{best}(90)} \n",
+    "$$\n",
+    "$$\n",
+    "    E_\\gamma = 661.7 \\pm 9\\ keV\n",
     "$$\n",
     "Получим:\n",
     "$$\n",
@@ -577,7 +601,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
