--- a/slides.ipynb
+++ b/slides.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -193,7 +193,7 @@
        "1024"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -276,7 +276,7 @@
        "'asxasxdcbbb'"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -314,7 +314,7 @@
        "'bbbbbbbbb'"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -502,7 +502,7 @@
        "5"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -548,7 +548,7 @@
        "(0, 7, 42)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -574,7 +574,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-82-cb48f2a4d32c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mt_example\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-15-cb48f2a4d32c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mt_example\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
      ]
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -621,7 +621,7 @@
        "{1, 2, 3, 'asx'}"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -646,7 +646,7 @@
        "{1, 2, 3, 42, 'asx'}"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -708,7 +708,7 @@
        "{'universe_number': 42, 0: 1}"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -732,7 +732,7 @@
        "42"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -900,7 +900,7 @@
        "[0, 2, 4, 6, 8]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -924,7 +924,7 @@
        "[0, 1, 2, 3, 4]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 29,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 30,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 31,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1114,7 +1114,7 @@
        "16"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 32,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 33,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 34,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 35,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1223,12 +1223,12 @@
     }
    },
    "source": [
-    "Именованный арументы можно менять местами"
+    "Именованные арументы можно менять местами"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 36,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1407,7 +1407,7 @@
     }
    },
    "source": [
-    "### Некоторые простешие операции"
+    "### Некоторые простейшие операции"
    ]
   },
   {
@@ -1745,7 +1745,7 @@
     }
    },
    "source": [
-    "### Решение системы линейных уравнение\n",
+    "### Решение системы линейных уравнений\n",
     "$$ Ax = b$$"
    ]
   },
@@ -1990,7 +1990,7 @@
    "source": [
     "* Библиотека для работы с массивами данных\n",
     "* Подходит для нечисловых данных\n",
-    "* Можно посмотреть на данных глазами\n",
+    "* Можно посмотреть на данные глазами\n",
     "* Красивые таблички"
    ]
   },
@@ -3220,8 +3220,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "* [Отличный обзор инструментов](http://merkulov.top/2018/02/17/scientifictools)\n",
+    "* [Введение в Python от Сколтеха](https://github.com/oseledets/nla2016/blob/master/lectures/Python_Intro.ipynb)\n",
+    "* [Лекции курса по Python на ВМК](https://github.com/mmp-practicum-team/mmp_practicum_fall_2018)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 39,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -3240,7 +3253,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook slides.ipynb to slides\n",
-      "[NbConvertApp] Writing 439706 bytes to slides.slides.html\n"
+      "[NbConvertApp] Writing 440282 bytes to slides.slides.html\n"
      ]
     }
    ],
@@ -3276,14 +3289,14 @@
    "version": "3.7.0"
   },
   "nbconvert": {
-   "height": "70%",
+   "height": "85%",
    "theme": "simple",
-   "width": "70%"
+   "width": "85%"
   },
   "rise": {
-   "height": "70%",
+   "height": "85%",
    "theme": "simple",
-   "width": "70%"
+   "width": "85%"
   }
  },
  "nbformat": 4,
