--- a/lab_1.2/report.ipynb
+++ b/lab_1.2/report.ipynb
@@ -33,36 +33,31 @@
     "Эффект Комптона - увеличение длины рассеянного излучения по сравнению с падающим.\n",
     "Будем считать, что $\\gamma$ -излучение - представляет собой поток квантов у которых:  \n",
     "\n",
-    "$$\n",
-    "    E = \\hbar\\omega\n",
-    "$$\n",
-    "$$\n",
-    "    p = \\dfrac{\\hbar\\omega}{c}\n",
-    "$$\n",
+    "\\begin{align*}\n",
+    "    &E = \\hbar\\omega \\\\ \n",
+    "    &p = \\dfrac{\\hbar\\omega}{c}\n",
+    "\\end{align*}\n",
     "\n",
     "При этом эффект Комптона интерпретируется как результат упругого соударения двух частиц: $\\gamma$\\--кванта и свободного электрона. \n",
     "Пусть электрон до соударения покоился, его энергия: \n",
     "\n",
-    "$$ \n",
+    "\\begin{align*}\n",
     "    E_{el} = mc^2\n",
-    "$$\n",
+    "\\begin{align*}\n",
     "\n",
     "$\\gamma$ -квант имел начальную энергию \n",
     "\n",
-    "$$\n",
-    "    E_k = \\hbar\\omega_0\n",
-    "$$\n",
-    "$$\n",
-    "    p_k = \\frac{\\hbar\\omega}{c}\n",
-    "$$\n",
+    "\\begin{align*}\n",
+    "    &E_k = \\hbar\\omega_0 \\\\\n",
+    "    &p_k = \\frac{\\hbar\\omega}{c}\n",
+    "\\end{align*}\n",
     "\n",
     "\n",
     "Тогда после соударения:\n",
-    "$$\n",
-    "    E_{el} = \\gamma mc^2\n",
-    "$$\n",
+    "\\begin{align*}\n",
+    "    E_{el} = \\gamma mc^2 \\\\\n",
     "    p_{el} = \\gamma mv\n",
-    "$$\n",
+    "\\end{align*}\n",
     "\n",
     "Здесь:\n",
     "* $\\gamma = \\left(1 - \\left(\\dfrac{v}{c}\\right)^2\\right)^\\frac{1}{2}$\n",
@@ -71,30 +66,26 @@
     "\n",
     "\n",
     "Тогда ЗСИ и ЗСЭ:\n",
-    "$$\n",
-    "    mc^2 + \\hbar\\omega_0 = \\gamma mc^2 + \\hbar\\omega_1\n",
-    "$$\n",
-    "$$\n",
-    "    \\dfrac{\\hbar\\omega_0}{c} = \\gamma mv\\cos(\\phi) + \\dfrac{\\hbar\\omega_1}{c}\\cos(\\theta) \\\\\n",
-    "$$\n",
-    "$$\n",
-    "    \\gamma mv \\sin(\\phi) = \\dfrac{\\hbar\\omega}{c}\\sin{\\theta}\n",
-    "$$\n",
-    "\n",
+    "\\begin{align*}\n",
+    "    &mc^2 + \\hbar\\omega_0 = \\gamma mc^2 + \\hbar\\omega_1 \\\\\n",
+    "    &\\dfrac{\\hbar\\omega_0}{c} = \\gamma mv\\cos(\\phi) + \\dfrac{\\hbar\\omega_1}{c}\\cos(\\theta) \\\\\n",
+    "    &\\gamma mv \\sin(\\phi) = \\dfrac{\\hbar\\omega}{c}\\sin{\\theta}\n",
+    "\\end{align*}\n",
     "\n",
     "Отсюда:\n",
     "\n",
-    "$$\n",
+    "\\begin{align*}\n",
     "    \\Delta\\lambda = \\dfrac{h}{mc}(1 - \\cos(\\theta)) = \\Lambda_k(1 - \\cos(\\theta))\n",
-    "$$\n",
+    "\\end{align*}\n",
+    "\n",
     "* $\\Lambda_k$ - Комптоновская длинна волны электрона.\n",
     "\n",
     "\n",
     "Последнее равенстно можно переписать в виде:\n",
     "\n",
-    "$$\n",
+    "\\begin{align*}\n",
     "    \\dfrac{1}{\\epsilon(\\theta)} - \\dfrac{1}{\\epsilon_0} = 1 - \\cos(\\theta)\n",
-    "$$\n",
+    "\\end{align*}\n",
     " * $\\epsilon_0 = E_0/(mc^2)$ \\-- энергия $\\gamma$\\--кванта, падающего на рассеиватель."
    ]
   },
@@ -108,23 +99,17 @@
     "\n",
     "Таким образом:\n",
     "\n",
-    "$$\n",
+    "\\begin{equation*}\n",
     "    \\dfrac{1}{N(\\theta)} - \\dfrac{1}{N_0} = A(1 - \\cos(\\theta))\n",
-    "$$\n",
+    "\\end{equation*}\n",
     "\n",
     "Оценим погрешности:\n",
-    "$$\n",
-    "    \\dfrac{\\sigma N}{N} = 0.01\n",
-    "$$\n",
-    "$$\n",
-    "    \\sigma \\theta = 0.5 \\deg\n",
-    "$$\n",
-    "$$\n",
-    "    \\sigma X = |\\sin(\\theta)|\\sigma\\theta \\\\\n",
-    "$$\n",
-    "$$\n",
-    "    \\sigma Y = \\left|\\dfrac{\\sigma N}{N(\\theta)^2}\\right|\n",
-    "$$"
+    "\\begin{align*}\n",
+    "    &\\dfrac{\\sigma N}{N} = 0.01 \\\\\n",
+    "    &\\sigma \\theta = 0.5 \\deg \\\\\n",
+    "    &\\sigma X = |\\sin(\\theta)|\\sigma\\theta \\\\\n",
+    "    &\\sigma Y = \\left|\\dfrac{\\sigma N}{N(\\theta)^2}\\right|\n",
+    "\\end{align*}"
    ]
   },
   {
@@ -525,40 +510,31 @@
    "source": [
     "## Результаты\n",
     "Параметры получившейся наилучшей прямой (использованный метод апроксимации \\-- OLS (ordinary least square)):\n",
-    "$$\n",
-    "    Y = AX + B\n",
-    "$$\n",
-    "$$\n",
-    "    A = 0.0015 \\pm 3 \\cdot 10^{-5}\n",
-    "$$\n",
-    "$$\n",
-    "    B = 0.0011 \\pm 1 \\cdot 10^{-5}\n",
-    "$$\n",
+    "\\begin{align*}\n",
+    "    Y &= AX + B \\\\\n",
+    "    A &= 0.0015 \\pm 3 \\cdot 10^{-5} \\\\\n",
+    "    B &= 0.0011 \\pm 1 \\cdot 10^{-5}\n",
+    "\\end{align*}\n",
     "\n",
     "Также, нужно учесть погрещность определения угла и максимума, посколько статистическая погрешность мала по сравнению с упомянутой погрешностью определения максимумов, то оценим:\n",
     "\n",
-    "$$\n",
+    "\\begin{equation*}\n",
     "    \\sigma(N_{best}) \\leq 9\n",
-    "$$\n",
+    "\\end{equation*}\n",
     "\n",
     "\n",
     "Отсюда\n",
-    "$$\n",
-    "    N_{best}(0) = 931 \\pm 9\n",
-    "$$\n",
-    "$$\n",
-    "    N_{best}(90) = 395 \\pm 9\n",
-    "$$\n",
-    "$$\n",
-    "    mc^2 = E_\\gamma \\cdot \\dfrac{N_{best}(90)}{N_{best}(0) - N_{best}(90)} \n",
-    "$$\n",
-    "$$\n",
-    "    E_\\gamma = 661.7 \\pm 9\\ keV\n",
-    "$$\n",
+    "\\begin{align*}\n",
+    "    &N_{best}(0) = 931 \\pm 9 \\\\\n",
+    "    &N_{best}(90) = 395 \\pm 9 \\\\\n",
+    "    &mc^2 = E_\\gamma \\cdot \\dfrac{N_{best}(90)}{N_{best}(0) - N_{best}(90)} \\\\\n",
+    "    &E_\\gamma = 661.7 \\pm 9\\ keV\n",
+    "\\end{align*}\n",
+    "\n",
     "Получим:\n",
-    "$$\n",
-    "    mc^2 = 487 \\pm 35\\ keV\n",
-    "$$"
+    "\\begin{align*}\n",
+    "    &mc^2 = 487 \\pm 35\\ keV\n",
+    "\\end{align*}"
    ]
   },
   {
