--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -17,12 +17,10 @@
    "source": [
     "# Оптимизации\n",
     "## Задача\n",
-    "$$\n",
-    "    f(x) \\rightarrow min \\\\\n",
-    "$$\n",
-    "$$\n",
-    "    x \\in \\mathbb{R} \n",
-    "$$\n",
+    "\\begin{align*}\n",
+    "    f(&x) \\rightarrow min \\\\\n",
+    "    &x \\in \\mathbb{R} \n",
+    "\\end{align*}\n",
     "\n",
     "## Градиентый спуск\n",
     "Небольшие шаги в направлении антиградиента из текущей точки"
