--- a/lab_1.2/report.ipynb
+++ b/lab_1.2/report.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "\\begin{align*}\n",
     "    E_{el} = mc^2\n",
-    "\\begin{align*}\n",
+    "\\end{align*}\n",
     "\n",
     "$\\gamma$ -квант имел начальную энергию \n",
     "\n",
