--- a/lab_1.2/report.ipynb
+++ b/lab_1.2/report.ipynb
@@ -67,9 +67,9 @@
     "\n",
     "Тогда ЗСИ и ЗСЭ:\n",
     "\\begin{align*}\n",
-    "    &mc^2 + \\hbar\\omega_0 = \\gamma mc^2 + \\hbar\\omega_1 \\\\\n",
-    "    &\\dfrac{\\hbar\\omega_0}{c} = \\gamma mv\\cos(\\phi) + \\dfrac{\\hbar\\omega_1}{c}\\cos(\\theta) \\\\\n",
-    "    &\\gamma mv \\sin(\\phi) = \\dfrac{\\hbar\\omega}{c}\\sin{\\theta}\n",
+    "    mc^2 + \\hbar\\omega_0 = \\gamma mc^2 + \\hbar\\omega_1 \\\\\n",
+    "    \\dfrac{\\hbar\\omega_0}{c} = \\gamma mv\\cos(\\phi) + \\dfrac{\\hbar\\omega_1}{c}\\cos(\\theta) \\\\\n",
+    "    \\gamma mv \\sin(\\phi) = \\dfrac{\\hbar\\omega}{c}\\sin{\\theta}\n",
     "\\end{align*}\n",
     "\n",
     "Отсюда:\n",
