--- a/lab_1.2/results.tex
+++ b/lab_1.2/results.tex
@@ -8,7 +8,7 @@
 \usepackage[table, dvipsnames]{xcolor}
 \graphicspath{ {} }
 \author{Моргачев Глеб 577}
-\title{\textbf{Лабораторная работа \textnumero 1.2} \\{Исследование эффекта Комптона}}
+\title{\textbf{Лабораторная работа \textnumer.o 1.2} \\{Исследование эффекта Комптона}}
 \date{}
 
 
