--- a/slides.ipynb
+++ b/slides.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 68,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 69,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 70,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 71,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -193,7 +193,7 @@
        "1024"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 72,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 73,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -276,7 +276,7 @@
        "'asxasxdcbbb'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 74,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -314,7 +314,7 @@
        "'bbbbbbbbb'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 75,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 76,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 77,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 78,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 79,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 80,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -502,7 +502,7 @@
        "5"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 81,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -548,7 +548,7 @@
        "(0, 7, 42)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 82,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -574,7 +574,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-cb48f2a4d32c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mt_example\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-82-cb48f2a4d32c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mt_example\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
      ]
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 83,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -621,7 +621,7 @@
        "{1, 2, 3, 'asx'}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 84,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -646,7 +646,7 @@
        "{1, 2, 3, 42, 'asx'}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 85,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 86,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -708,7 +708,7 @@
        "{'universe_number': 42, 0: 1}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 87,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -732,7 +732,7 @@
        "42"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 88,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 89,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 90,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 91,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -900,7 +900,7 @@
        "[0, 2, 4, 6, 8]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 92,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -924,7 +924,7 @@
        "[0, 1, 2, 3, 4]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 93,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 94,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 95,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 96,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 97,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 98,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1114,7 +1114,7 @@
        "16"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 99,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 100,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 101,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 102,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1223,12 +1223,12 @@
     }
    },
    "source": [
-    "Именованные арументы можно менять местами"
+    "Именованный арументы можно менять местами"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 103,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1407,7 +1407,7 @@
     }
    },
    "source": [
-    "### Некоторые простейшие операции"
+    "### Некоторые простешие операции"
    ]
   },
   {
@@ -1745,7 +1745,7 @@
     }
    },
    "source": [
-    "### Решение системы линейных уравнений\n",
+    "### Решение системы линейных уравнение\n",
     "$$ Ax = b$$"
    ]
   },
@@ -1990,7 +1990,7 @@
    "source": [
     "* Библиотека для работы с массивами данных\n",
     "* Подходит для нечисловых данных\n",
-    "* Можно посмотреть на данные глазами\n",
+    "* Можно посмотреть на данных глазами\n",
     "* Красивые таблички"
    ]
   },
@@ -3214,7 +3214,8 @@
    "source": [
     "* [Задачи оптимизации](https://github.com/gmorgachev/python_intro/blob/master/optimization.ipynb)\n",
     "* [Вычматы](https://github.com/gmorgachev/python_intro/blob/master/computation_math.ipynb)\n",
-    "* [Обработка лабораторной](https://github.com/gmorgachev/python_intro/tree/master/lab_1.2)\n",
+    "* Обработка лабораторной: [исходники](https://github.com/gmorgachev/python_intro/tree/master/lab_1.2), \n",
+    "    [отчет](lab_1.2/report.html)\n",
     "* [Этот сайт](https://gmorgachev.github.io/python_intro/)\n",
     "* https://github.com/gmorgachev/python_intro - репозиторий"
    ]
@@ -3227,14 +3228,14 @@
     }
    },
    "source": [
-    "* [Отличный обзор инструментов](http://merkulov.top/2018/02/17/scientifictools)\n",
+    "* [Отличный обзор инструментов](http://merkulov.top/2018/02/17/scientifictools/)\n",
     "* [Введение в Python от Сколтеха](https://github.com/oseledets/nla2016/blob/master/lectures/Python_Intro.ipynb)\n",
-    "* [Лекции курса по Python на ВМК](https://github.com/mmp-practicum-team/mmp_practicum_fall_2018)"
+    "* [Курс Python на ВМК](https://github.com/mmp-practicum-team/mmp_practicum_fall_2018)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -3253,7 +3254,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook slides.ipynb to slides\n",
-      "[NbConvertApp] Writing 440282 bytes to slides.slides.html\n"
+      "[NbConvertApp] Writing 439761 bytes to slides.slides.html\n"
      ]
     }
    ],
@@ -3289,14 +3290,14 @@
    "version": "3.7.0"
   },
   "nbconvert": {
-   "height": "85%",
+   "height": "70%",
    "theme": "simple",
-   "width": "85%"
+   "width": "70%"
   },
   "rise": {
-   "height": "85%",
+   "height": "70%",
    "theme": "simple",
-   "width": "85%"
+   "width": "70%"
   }
  },
  "nbformat": 4,
