--- a/slides.ipynb
+++ b/slides.ipynb
@@ -3216,8 +3216,8 @@
     "* [Вычматы](https://github.com/gmorgachev/python_intro/blob/master/computation_math.ipynb)\n",
     "* Обработка лабораторной: [исходники](https://github.com/gmorgachev/python_intro/tree/master/lab_1.2), \n",
     "    [отчет](lab_1.2/report.html)\n",
-    "* [Этот сайт](https://gmorgachev.github.io/python_intro/)\n",
-    "* https://github.com/gmorgachev/python_intro - репозиторий"
+    "* [gmorgachev.github.io/python_intro](https://gmorgachev.github.io/python_intro/) - этот сайт\n",
+    "* [github.com/gmorgachev/python_intro](https://github.com/gmorgachev/python_intro) - репозиторий"
    ]
   },
   {
@@ -3235,7 +3235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -3254,7 +3254,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook slides.ipynb to slides\n",
-      "[NbConvertApp] Writing 439761 bytes to slides.slides.html\n"
+      "[NbConvertApp] Writing 440330 bytes to slides.slides.html\n"
      ]
     }
    ],
