--- a/slides.ipynb
+++ b/slides.ipynb
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -1219,11 +1219,11 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
-    "Именованный арументы можно менять местами"
+    "Именованные арументы можно менять местами"
    ]
   },
   {
@@ -1301,17 +1301,18 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
     "### Ресурсы\n",
-    "* https://docs.scipy.org/doc/numpy-1.15.1/user/quickstart.html - введение"
+    "* https://docs.scipy.org/doc/numpy-1.15.1/user/quickstart.html - введение\n",
+    "* https://docs.scipy.org/doc/numpy-1.13.0/reference/ - документация"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 49,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1335,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 50,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1407,7 +1408,7 @@
     }
    },
    "source": [
-    "### Некоторые простешие операции"
+    "### Некоторые простейшие операции"
    ]
   },
   {
@@ -1745,7 +1746,7 @@
     }
    },
    "source": [
-    "### Решение системы линейных уравнение\n",
+    "### Решение системы линейных уравнений\n",
     "$$ Ax = b$$"
    ]
   },
@@ -1990,7 +1991,7 @@
    "source": [
     "* Библиотека для работы с массивами данных\n",
     "* Подходит для нечисловых данных\n",
-    "* Можно посмотреть на данных глазами\n",
+    "* Можно посмотреть на данные глазами\n",
     "* Красивые таблички"
    ]
   },
@@ -3235,7 +3236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 51,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -3254,7 +3255,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook slides.ipynb to slides\n",
-      "[NbConvertApp] Writing 440330 bytes to slides.slides.html\n"
+      "[NbConvertApp] Writing 440492 bytes to slides.slides.html\n"
      ]
     }
    ],
