reference to merkulov.top

--- a/slides.ipynb
+++ b/slides.ipynb
@@ -3229,14 +3229,14 @@
     }
    },
    "source": [
-    "* [Отличный обзор инструментов](http://merkulov.top/2018/02/17/scientifictools/)\n",
+    "* [merkulov.top/2018/02/17/scientifictools](http://merkulov.top/2018/02/17/scientifictools/) - отличный обзор инструментов\n",
     "* [Введение в Python от Сколтеха](https://github.com/oseledets/nla2016/blob/master/lectures/Python_Intro.ipynb)\n",
     "* [Курс Python на ВМК](https://github.com/mmp-practicum-team/mmp_practicum_fall_2018)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -3255,7 +3255,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook slides.ipynb to slides\n",
-      "[NbConvertApp] Writing 440492 bytes to slides.slides.html\n"
+      "[NbConvertApp] Writing 440532 bytes to slides.slides.html\n"
      ]
     }
    ],
